@@ -120,6 +120,11 @@ message AlignmentEntry {
   optional RelatedAlignmentEntry pair_alignment_link=16;
   /* Index of the read fragment from which this alignment was obtained. */
   optional uint32 fragment_index=17;
+
+   /* If a read spans exon-exon junctions some aligners (e.g., GSNAP) will output two alignment entries, one for each
+   matching part of the read, and link these entries with spliced_alignment_links (bi-directional).
+   */
+  optional RelatedAlignmentEntry spliced_alignment_link=18;
   /* The size of the insert used when making the sequence library. This is the total size of the DNA
   fragment to sequence, without the adapters. This is not the length of sequence that separates the reads.
   See http://seqanswers.com/forums/showthread.php?t=8730 for details. Insert size is inferred for each pair
