@@ -1,11 +1,13 @@
 1.9 -> Development
+ - Introduced a field spliced_alignment_link in AlignmentEntry to represent relation between parts of reads
+   that span exon-exon junctions. 
  - Introduced meta-data in compact-reads files. Meta-data provide a way to document how the sample
    was opbtained. Suggested information to be recorded includes when the library was sequenced (useful
    to detect batch-effect, as suggested by a participant to the SEQC meeting at the NIH Bethesda campus),
    as well as sequencing instrument. Modes fasta-to-compact, compact-file-stats and reformat-compact-reads
    have been updated to define, transfer or display meta-data when appropriate.
  - Mode compact-alignment-stats now prints statistics about paired-end reads.
- - Removed spurious SAM header when writing alignemnts in plain text format.
+ - Removed spurious SAM header when writing alignments in plain text format.
 1.9
  - New fdr mode provides a tool to combine tab delimited file where some columns contain P-values and
    adjust selected P-values for multiple testing with the Benjamini Hochberg method. The tool is efficient
